force-app/main/default/objects/Property__c/fields/percent_Units_for_QPs__c.field-meta.xml
<CustomField>
    <fullName>percent_Units_for_QPs__c</fullName>
    <label>% Units for QPs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>