force-app/main/default/objects/Property__c/fields/Price_of_site_property__c.field-meta.xml
<CustomField>
    <fullName>Price_of_site_property__c</fullName>
    <label>Price of site/property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>