force-app/main/default/objects/Property__c/fields/Project_Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Area__c</fullName>
    <inlineHelpText>Related to the utilization for proposed development. Specify sq ft or acres in the text box.</inlineHelpText>
    <label>Project Site Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>