force-app/main/default/objects/Property__c/fields/PropertyImage__c.field-meta.xml
<CustomField>
    <fullName>PropertyImage__c</fullName>
    <formula>IMAGE( 

IF(ISBLANK(URL_of_Property_Image__c),&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068BZ000002A2hi&amp;operationContext=CHATTER&amp;contentId=05TBZ000007esku&quot;,
URL_of_Property_Image__c),
&quot;Property&quot;, 85,85)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Image</label>
    <type>Text</type>
</CustomField>