force-app/main/default/objects/Property__c/fields/Public_Sewer_ft_from_site__c.field-meta.xml
<CustomField>
    <fullName>Public_Sewer_ft_from_site__c</fullName>
    <label>Public Sewer ft from site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>