force-app/main/default/objects/Property__c/fields/Public_Sewer_System__c.field-meta.xml
<CustomField>
    <fullName>Public_Sewer_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Sewer System</label>
    <type>Checkbox</type>
</CustomField>