force-app/main/default/objects/Property__c/fields/Public_Water_Supply__c.field-meta.xml
<CustomField>
    <fullName>Public_Water_Supply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Water Supply</label>
    <type>Checkbox</type>
</CustomField>