force-app/main/default/objects/Property__c/fields/Railroad_tracks_within_300_feet__c.field-meta.xml
<CustomField>
    <fullName>Railroad_tracks_within_300_feet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Railroad tracks within 300 feet</label>
    <type>Checkbox</type>
</CustomField>