force-app/main/default/objects/Property__c/fields/Ravines_or_steep_grades__c.field-meta.xml
<CustomField>
    <fullName>Ravines_or_steep_grades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ravines or steep grades</label>
    <type>Checkbox</type>
</CustomField>