force-app/main/default/objects/Property__c/fields/Residential_Floor_Area_Planned__c.field-meta.xml
<CustomField>
    <fullName>Residential_Floor_Area_Planned__c</fullName>
    <inlineHelpText>In gross square ft.</inlineHelpText>
    <label>Residential Floor Area Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>