force-app/main/default/objects/Property__c/fields/Seek_to_preserve_fed_assisted_housing__c.field-meta.xml
<CustomField>
    <fullName>Seek_to_preserve_fed_assisted_housing__c</fullName>
    <label>Seek to preserve fed assisted housing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>