force-app/main/default/objects/Property__c/fields/Sellers_City__c.field-meta.xml
<CustomField>
    <fullName>Sellers_City__c</fullName>
    <label>Sellers City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>