force-app/main/default/objects/Property__c/fields/Sellers_First__c.field-meta.xml
<CustomField>
    <fullName>Sellers_First__c</fullName>
    <label>Sellers First &amp; Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>