force-app/main/default/objects/Property__c/fields/Sellers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Phone__c</fullName>
    <label>Sellers Phone</label>
    <type>Phone</type>
</CustomField>