force-app/main/default/objects/Property__c/fields/Sellers_Street__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Street__c</fullName>
    <label>Sellers Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>