force-app/main/default/objects/Property__c/fields/Sellers_Zip__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Zip__c</fullName>
    <label>Sellers Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>