force-app/main/default/objects/Property__c/fields/Site_to_be_subdivided__c.field-meta.xml
<CustomField>
    <fullName>Site_to_be_subdivided__c</fullName>
    <label>Site to be subdivided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>