force-app/main/default/objects/Property__c/fields/Standing_water__c.field-meta.xml
<CustomField>
    <fullName>Standing_water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standing water</label>
    <type>Checkbox</type>
</CustomField>