force-app/main/default/objects/Property__c/fields/Structural_System__c.field-meta.xml
<CustomField>
    <fullName>Structural_System__c</fullName>
    <label>Structural System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>