force-app/main/default/objects/Property__c/fields/Targeting_special_populations__c.field-meta.xml
<CustomField>
    <fullName>Targeting_special_populations__c</fullName>
    <label>Targeting special populations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>