force-app/main/default/objects/Property__c/fields/Telephone_ft_from_site__c.field-meta.xml
<CustomField>
    <fullName>Telephone_ft_from_site__c</fullName>
    <label>Telephone ft from site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>