force-app/main/default/objects/Property__c/fields/Telephone_System__c.field-meta.xml
<CustomField>
    <fullName>Telephone_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telephone System</label>
    <type>Checkbox</type>
</CustomField>