force-app/main/default/objects/Property__c/fields/Total_Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Site_Area__c</fullName>
    <inlineHelpText>Related to the purchase of this transaction. Specify sq ft or acres in the text box.</inlineHelpText>
    <label>Total Site Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>