force-app/main/default/objects/Property__c/fields/Total_Units_for_this_site__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_for_this_site__c</fullName>
    <formula>Number_of_Low_Mod_Units_at_80__c +
 Number_of_Low_Mod_Units_at_60__c + 
Number_of_Low_Mod_Units_at_50__c +
 Number_of_Market_Rate_units__c + 
Number_of_Low_Mod_Units_at_30__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units for this site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>