force-app/main/default/objects/Property__c/fields/Type_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Property__c</fullName>
    <label>Type of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant Lot</fullName>
            </value>
            <value>
                <fullName>Single Family Home</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Tri-Plex</fullName>
            </value>
            <value>
                <fullName>Quadraplex</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Apartments 5+ Units</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>