force-app/main/default/objects/Property__c/fields/unusual_site_conditions__c.field-meta.xml
<CustomField>
    <fullName>unusual_site_conditions__c</fullName>
    <inlineHelpText>Please Describe any other unusual site conditions:</inlineHelpText>
    <label>unusual site conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>