force-app/main/default/objects/Property__c/fields/URL_of_Property_Image__c.field-meta.xml
<CustomField>
    <fullName>URL_of_Property_Image__c</fullName>
    <inlineHelpText>When a picture is loaded into the asset library, the link to the image can be added to this field, and the property image will show on the record. ONLY Part is needed:/servlet/servlet.FileDownload?file=01570000000Q6El</inlineHelpText>
    <label>URL of Property Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>