force-app/main/default/objects/Property__c/fields/Water_supply_ft_from_site__c.field-meta.xml
<CustomField>
    <fullName>Water_supply_ft_from_site__c</fullName>
    <label>Water supply ft from site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>