force-app/main/default/objects/Property__c/fields/within_300_feet_of_a_park__c.field-meta.xml
<CustomField>
    <fullName>within_300_feet_of_a_park__c</fullName>
    <inlineHelpText>Is this site/property within 300 feet of a park?</inlineHelpText>
    <label>within 300 feet of a park</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>