force-app/main/default/objects/Property__c/fields/Zoning_for_residential_use__c.field-meta.xml
<CustomField>
    <fullName>Zoning_for_residential_use__c</fullName>
    <inlineHelpText>Does the site zoning allow the proposed residential use</inlineHelpText>
    <label>Zoning for residential use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>